# crypto_crawling

./: .clinerules  .env.example  .gitignore  README.md  crawl_crypto_api_docs.py  error_logger.py  main.py  pyproject.toml  setup.py  site_pages.sql
config/: README.md  crypto_api_configs.json  db_functions.sql  get_distinct_api_sources.sql  site_pages.sql
crawl4AI-examples/: 3-crawl_docs_FAST.py
docs/: crypto-apis.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
old/: crawl4ai_extract_crypto_api_urls.py  crawl_crypto_api_docs.py  crypto-apis.md  crypto_api_config.py  crypto_api_configs.json  crypto_api_expert.py  explore_api_url.py  generate_api_configs.py  installed_packages.txt  run_test.py  site_pages.sql  streamlit_ui.py  url_extractor.py
progress/: CoinDesk_progress.json  CoinMarketCap_progress.json
scripts/: setup_db.py
src/crypto_crawler/: __init__.py
src/crypto_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/crypto_crawler/api/: __init__.py  config.py  expert.py
src/crypto_crawler/crawling/: __init__.py  crawler.py  url_extractor.py
src/crypto_crawler/scripts/: __init__.py  explore_api_url.py  generate_api_configs.py  test_rag_agent.py  test_supabase_connection.py
src/crypto_crawler/ui/: __init__.py  streamlit_app.py
src/crypto_crawler/utils/: __init__.py  db_cleanup.py  error_logger.py
